--- a/index.html
+++ b/index.html
@@ -52,15 +52,21 @@
 
       <!-- sezione jumbo. ci vanno due div, in quello di destra(sotto per xs) va un form -->
       <section class="jumbo container-fluid container-fluid">
-				<div class="container">
+				<div class="container jumbo-container">
 					<div class="row">
 
 						<div class="col-xs-12 col-md-6 col-lg-6">
-							<div class="">
-								The simplest cloud platform for developers & teams
+							<div class="white">
+								<h1>
+									The simplest cloud platform for developers & teams
+								</h1>
+
 							</div>
-							<div class="">
-								Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and businesses, wheter you're running one virtual machine or ten thousand.
+							<div class="white">
+								<h4>
+									Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and businesses, wheter you're running one virtual machine or ten thousand.
+								</h4>
+
 							</div>
 
 						</div>
@@ -68,10 +74,10 @@
 						<div class="col-xs-12 col-md-6 col-lg-6">
 							<div class="jumbo-form">
 								<div class="">
-									Deploy your app in seconds.
+									<h3>Deploy your app in seconds.</h3>
 								</div>
-								<div class="">
-									Get started now.
+								<div class="blueacceso">
+									<h3>Get started now.</h3>
 								</div>
 								<form action="/action_page.php">
 								  <div class="form-group">
@@ -88,7 +94,7 @@
 										<img src="img/google-icon.png" alt="">
 										<span>&nbsp;Sign up with google</span>
 									</button>
-									<div class="">
+									<div class="center">
 										By signing up you agree to the <a href="#">Terms of Service</a>.
 									</div>
 
@@ -112,12 +118,12 @@
       <!-- sezione1, quella con i 6 loghi -->
       <section class="section1 container-fluid">
 
-        <div class="container">
+        <div class="container-fluid">
 
           <div class="row">
             <div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-              <div class="">
-                INNOVATIVE BUSINESS TRUST DIGITALOCEAN
+              <div class="center s1title">
+								INNOVATIVE BUSINESS TRUST DIGITALOCEAN
               </div>
             </div>
           </div>
@@ -128,31 +134,33 @@
               <img src="img/docker.png" alt="">
             </div>
 
-            <div class="loghi-esterni col-xs-6 col-md-2">
-              <img src="img/gitlab.png" alt="">
+						<div class="loghi-esterni col-xs-6 col-md-2">
+							<img src="img/gitlab.png" alt="">
             </div>
+
 
             <div class="loghi-esterni col-xs-6 col-md-2">
               <img src="img/slack.png" alt="">
             </div>
 
+						<div class="loghi-esterni col-xs-6 col-md-2">
+							<img src="img/hashicorp.png" alt="">
+            </div>
+
+
             <div class="loghi-esterni col-xs-6 col-md-2">
               <img src="img/hashicorp.png" alt="">
-
             </div>
-            <div class="loghi-esterni col-xs-6 col-md-2">
-              <img src="img/hashicorp.png" alt="">
 
+						<div class="loghi-esterni col-xs-6 col-md-2">
+							<img src="img/slack.png" alt="">
             </div>
-            <div class="loghi-esterni col-xs-6 col-md-2">
-              <img src="img/splunk.png" alt="">
 
-            </div>
           </div>
 
           <div class="row">
             <div class="col-xs-4 col-xs-offset-4 col-md-4 col-lg-4">
-            <div class="">
+            <div class="center">
               <a href="#">View customer stories ></a>
             </div>
           </div>
@@ -166,18 +174,20 @@
       <section class="section2 container-fluid">
         <div class="container">
           <div class="row">
-						<div class="col-xs-12">
-							<div class="">
-								Deploy and scale seamlessly
+						<div class="col-xs-12 center padbott">
+							<div class="bluscuro">
+								<h3>Deploy and scale seamlessly</h3>
+
 							</div>
-							<div class="">
+							<div class="grey">
 								Our optimized configuration process saves your team time when runnning and scaling distributed applications, AI & machine learning workloads, hosted services, cclient websites, or CI/CD envviroments.
+
 							</div>
 						</div>
 
 
-            <div class="col-xs-12 col-md-4 col-lg-4">
-              <div class="sec2menu">
+            <div class="padbott col-xs-12 col-md-4 col-lg-4">
+              <div class="sec2menu grey">
                 <div class="">
                   Deploy
                 </div>
@@ -200,50 +210,50 @@
             <div class="col-xs-12 col-md-8 col-lg-8">
               <div class="container-fluid">
                 <div class="row">
-                  <div class="col-xs-12 col-md-6 col-lg-6">
-                    <div class="">
+                  <div class="padbott col-xs-12 col-md-6 col-lg-6">
+                    <div class="padbott">
                     	<img src="img/cluster-deploy.svg" alt="">
                     </div>
-										<div class="">
+										<div class="padbott bluscuro bold">
 											Cluster deployments
 										</div>
-										<div class="">
+										<div class="grey">
 											Provision multiple Droplets (virtual machines) in seconds with our control pael, CLI, or directly against our API.
 										</div>
                   </div>
-                  <div class="col-xs-12 col-md-6 col-lg-6">
-										<div class="">
+                  <div class="padbott col-xs-12 col-md-6 col-lg-6">
+										<div class="padbott">
                     	<img src="img/optimized-compute.svg" alt="">
                     </div>
-										<div class="">
+										<div class="padbott bluscuro bold">
 											Optimized compute types
 										</div>
-										<div class="">
+										<div class="grey">
 											Get the compute resources you need with Standard or Optimized Droplets
 										</div>
                   </div>
                 </div>
 
                 <div class="row">
-                  <div class="col-xs-12 col-md-6 col-lg-6">
-										<div class="">
+                  <div class="padbott col-xs-12 col-md-6 col-lg-6">
+										<div class="padbott">
                     	<img src="img/one-click.svg" alt="">
                     </div>
-										<div class="">
+										<div class="padbott bluscuro bold">
 											One-click apps
 										</div>
-										<div class="">
+										<div class="grey">
 											Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.
 										</div>
                   </div>
-                  <div class="col-xs-12 col-md-6 col-lg-6">
-										<div class="">
+                  <div class="padbott col-xs-12 col-md-6 col-lg-6">
+										<div class="padbott">
                     	<img src="img/global.svg" alt="">
                     </div>
-										<div class="">
+										<div class="padbott bluscuro bold">
 											Global availability
 										</div>
-										<div class="">
+										<div class="grey">
 										  Deploy to any of our data center regions around the world.
 										</div>
                   </div>
@@ -268,11 +278,12 @@
 					<div class="row">
 						<div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-6">
 
-							<div class="">
-								Designed for developers
+							<div class="bluscuro center">
+								<h3>Designed for developers</h3>
+
 							</div>
 
-							<div class="">
+							<div class="grey center padbott">
 								Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.
 							</div>
 
@@ -337,57 +348,58 @@
       <section class="section4 container-fluid">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-6 col-lg-offset-3">
-              The features your business needs
+            <div class="padbott col-xs-12 col-md-10 col-md-offset-1 col-lg-6 col-lg-offset-3">
+							<span class="bluscuro center"><h3>The features your business needs</h3></span>
+
 
             </div>
 
           </div>
 
           <div class="row">
-            <div class="col-xs-12 col-md-4 col-md-offset-0">
+            <div class="padbott col-xs-12 col-md-4 col-md-offset-0">
 							<div class="">
 								<img src="img/pred-pricing.svg" alt="">
 							</div>
-							<div class="">
+							<div class="bluscuro bold">
 								Predictable Pricing
 							</div>
-							<div class="">
+							<div class="grey">
 								Leve complex pricing structures behind. Always know what you'll play per month with a flat, industry-leading pricing structure.
 							</div>
-							<div class="">
-								<a href="#">Pricing ></a>
+							<div >
+								<a class="blueacceso" href="#">Pricing ></a>
 							</div>
 
 
             </div>
-            <div class="col-xs-12 col-md-4 col-md-offset-0">
+            <div class="padbott col-xs-12 col-md-4 col-md-offset-0">
 							<div class="">
 								<img src="img/world-class.svg" alt="">
 							</div>
-							<div class="">
+							<div class="bluscuro bold">
 								World-class service
 							</div>
-							<div class="">
+							<div class="grey">
 								Free round-the-clock technical support for all customers. You'll feel the love.
 							</div>
 							<div class="">
-								<a href="#">Support ></a>
+								<a class="blueacceso" href="#">Support ></a>
 							</div>
 
             </div>
-            <div class="col-xs-12 col-md-4 col-md-offset-0">
+            <div class="padbott col-xs-12 col-md-4 col-md-offset-0">
 							<div class="">
 								<img src="img/reliable-platform.svg" alt="">
 							</div>
-							<div class="">
+							<div class="bluscuro bold">
 								Reliable platform
 							</div>
-							<div class="">
+							<div class="grey">
 								More then 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99,99% uptime SLA for all services.
 							</div>
 							<div class="">
-								<a href="#">Pricing ></a>
+								<a class="blueacceso" href="#">Pricing ></a>
 							</div>
 
             </div>
@@ -405,7 +417,8 @@
         <div class="container">
           <div class="row s5nobottom">
             <div class="col-xs-12 col-lg-10 col-lg-offset-1">
-              Service your customers around the world from 12 regions.
+							<h4>Service your customers around the world from 12 regions.</h4>
+
 
             </div>
 
@@ -568,7 +581,8 @@
 						<div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-6">
 
 							<div class="">
-								Development teams love DigitalOcean
+								<h4>Development teams love DigitalOcean</h4>
+
 							</div>
 						  <div id="myCarousel2" class="carousel slide" data-ride="carousel">
 						    <!-- Indicators -->
@@ -626,7 +640,8 @@
         <div class="container">
           <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-4 col-lg-offset-4">
             <div class="">
-              Get started now.
+							<h4>Get started now.</h4>
+
             </div>
 						<div class="">
 							<button type="button" class="btn">Create your account</button>
