sistemo footer e ci sono

--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
       <section class="section5 container-fluid">
         <div class="container">
           <div class="row s5nobottom">
-            <div class="col-xs-12 col-lg-10 col-lg-offset-1">
-							<h4>Service your customers around the world from 12 regions.</h4>
+            <div class="padbott center white col-xs-12 col-lg-10 col-lg-offset-1">
+							<h3>Service your customers around the world from 12 regions.</h3>
 
 
             </div>
@@ -425,8 +425,8 @@
           </div>
 
           <div class="row s5nobottom">
-            <div class="col-xs-12 col-md-6">
-							<div class="container-fluid">
+            <div class="col-xs-12 col-md-6 padbott">
+							<div class="container-fluid white lines5">
 								<div class="row">
 									<div class="col-xs-1">
 										AMS2
@@ -497,7 +497,7 @@
             </div>
 
             <div class="col-xs-12 col-md-6">
-							<div class="container-fluid">
+							<div class="container-fluid white lines5">
 								<div class="row">
 									<div class="col-xs-1">
 										AMS2
@@ -580,8 +580,8 @@
 					<div class="row">
 						<div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-6">
 
-							<div class="">
-								<h4>Development teams love DigitalOcean</h4>
+							<div class="bluscuro center padbott">
+								<h3>Development teams love DigitalOcean</h3>
 
 							</div>
 						  <div id="myCarousel2" class="carousel slide" data-ride="carousel">
@@ -639,11 +639,11 @@
       <section class="section7 container-fluid">
         <div class="container">
           <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-4 col-lg-offset-4">
-            <div class="">
-							<h4>Get started now.</h4>
+            <div class="white padbott">
+							<h3>Get started now.</h3>
 
             </div>
-						<div class="">
+						<div class="blueacceso">
 							<button type="button" class="btn">Create your account</button>
 						</div>
 
