--- a/index.html
+++ b/index.html
@@ -660,20 +660,20 @@
 			<section class="container-fluid">
 				<div class="container">
 					<div class="row">
-						<div class="col-xs-12 col-md-6 col-lg-4">
-							<div class="">
+						<div class="padbott col-xs-12 col-md-6 col-lg-4">
+							<div class="padbott">
 								<a href="#">
 									<img src="img/logo-small.svg" alt="">
 
 								</a>
 							</div>
-							<div class="">
+							<div class="padbott">
 								@ 2018 DigitalOcean, LLC. All rights reserved.
 							</div>
-							<div class="">
+							<div class="padbott">
 								Proudly made in NY
 							</div>
-							<div class="footer-icons">
+							<div class="footer-icons padbott">
 								<ul>
 									<li><a href="#"><i style="font-size:24px" class="fa">&#xf099;</i></a> </li>
 									<li><a href="#"><i style="font-size:24px" class="fa">&#xf082;</i></a></li>
@@ -687,7 +687,7 @@
 						<div class="col-xs-12 col-md-12 col-lg-8">
 							<div class="container-fluid">
 								<div class="row">
-									<div class="col-xs-12 col-md-6 col-lg-3">
+									<div class="padbott col-xs-12 col-md-6 col-lg-3 ">
 										<div class="footer-list">
 											<ul>
 											  <li><span>Company</span> </li>
@@ -706,7 +706,7 @@
 										</div>
 
 									</div>
-									<div class="col-xs-12 col-md-6 col-lg-3">
+									<div class="padbott col-xs-12 col-md-6 col-lg-3">
 										<div class="footer-list">
 											<ul>
 											  <li><span>Company</span> </li>
@@ -724,7 +724,7 @@
 
 										</div>
 									</div>
-									<div class="col-xs-12 col-md-6 col-lg-3">
+									<div class="padbott col-xs-12 col-md-6 col-lg-3">
 										<div class="footer-list">
 											<ul>
 											  <li><span>Company</span> </li>
@@ -742,7 +742,7 @@
 
 										</div>
 									</div>
-									<div class="col-xs-12 col-md-6 col-lg-3">
+									<div class="padbott col-xs-12 col-md-6 col-lg-3">
 										<div class="footer-list">
 											<ul>
 											  <li><span>Company</span> </li>
